--- a/style.css
+++ b/style.css
@@ -84,3 +84,15 @@ input,
   justify-content: flex-start;
   text-align: center;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  justify-content: center;
+  margin: 16px;
+  padding: 16px;
+  border: double 6px black;
+  font-size: 20px;
+  font-weight: 600;
+}
