--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ header,
 footer {
   display: flex;
   justify-content: space-around;
-  background-color: #000;
+  background-color: #005f73;
   color: #fff;
   padding: 20px;
 }
@@ -21,13 +21,10 @@ main {
   min-height: 60vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   margin-left: -15px;
-  background-image: linear-gradient(
-    to bottom,
-    rgb(148, 37, 6),
-    rgb(60, 47, 35)
-  );
+  background-color: #1b1b1b;
   padding-bottom: 16px;
 }
 
@@ -37,8 +34,8 @@ li {
   justify-content: space-between;
   align-items: center;
   margin-left: 20px;
-  background-color: rgb(66, 65, 65);
-  color: #fff;
+  background-color: #005f73;
+  color: #f5f5f5;
   padding-right: 15px;
   margin-top: 16px;
   border-top-right-radius: 20px;
@@ -54,6 +51,7 @@ nav {
 nav button {
   font-size: 25px;
   width: 60px;
+  background-color: #ee9b00;
 }
 
 section,
@@ -76,13 +74,19 @@ input,
 }
 
 .result-container {
-  font-size: 30px;
-  margin: auto;
+  font-size: 25px;
+  margin: 150px auto;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
   text-align: center;
+  background-color: #94d2bd;
+  color: #1b1b1b;
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 10px;
 }
 
 a {
@@ -95,4 +99,15 @@ a {
   border: double 6px black;
   font-size: 20px;
   font-weight: 600;
+}
+
+button {
+  font-size: 16px;
+  touch-action: manipulation;
+}
+
+button:focus,
+a:focus {
+  outline: 3px solid #fff;
+  outline-offset: 2px;
 }
