--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+ {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -8,7 +8,7 @@ header,
 footer {
   display: flex;
   justify-content: space-around;
-  background-color: #005f73;
+  background-color: #5a3e2b;
   color: #fff;
   padding: 20px;
 }
@@ -24,7 +24,7 @@ main {
   justify-content: center;
   align-items: center;
   margin-left: -15px;
-  background-color: #1b1b1b;
+  background-color: #3b2a1a;
   padding-bottom: 16px;
 }
 
@@ -34,7 +34,7 @@ li {
   justify-content: space-between;
   align-items: center;
   margin-left: 20px;
-  background-color: #005f73;
+  background-color: #8c6b4f;
   color: #f5f5f5;
   padding-right: 15px;
   margin-top: 16px;
@@ -51,7 +51,8 @@ nav {
 nav button {
   font-size: 25px;
   width: 60px;
-  background-color: #ee9b00;
+  background-color: #d9a066;
+  margin: 5px;
 }
 
 section,
@@ -81,7 +82,7 @@ input,
   flex-wrap: wrap;
   justify-content: flex-start;
   text-align: center;
-  background-color: #94d2bd;
+  background-color: #c7a17a;
   color: #1b1b1b;
   width: 100%;
   padding-top: 20px;
