--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -24,7 +24,7 @@ main {
   justify-content: center;
   align-items: center;
   margin-left: -15px;
-  background-color: #3b2a1a;
+  background-color: #281d12;
   padding-bottom: 16px;
 }
 
@@ -34,7 +34,7 @@ li {
   justify-content: space-between;
   align-items: center;
   margin-left: 20px;
-  background-color: #8c6b4f;
+  background-color: #563c25;
   color: #f5f5f5;
   padding-right: 15px;
   margin-top: 16px;
